# Naver-SmartStore-FAQ-ChatBot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
app/: containers.py  main.py  run.py
app/api/: ask.py  logs.py
app/core/: __init__.py  chroma_client.py  config.py  logger.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  chat_session.py  embedding.py  generator.py  logger.py  retrieval.py  rewriter.py
app/services/prompting/: __init__.py  prompt_builder.py
app/utils/: __init__.py  prompt_builder.py  reject_filters.py  reject_phrases.txt  token_streamer.py
app/utils/templates/: rewrite_prompt.txt  system_prompt.txt
frontend/: streamlit_app.py
