[project]
name = "naver-smartstore-faq-chatbot"
version = "0.1.0"
description = "네이버 스마트스토어 FAQ RAG 챗봇"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "chromadb",
    "pydantic",
    "python-dotenv",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "pytest",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I", "W"]
line-length = 120

[tool.setuptools.packages.find]
include = ["app*", "frontend*"]